objects/Related_Article__c.object
<CustomObject>
    <description>This is a junction object to show which articles are related, i.e. if you are looking at 1 article, which other articles may be of interest.</description>
    <fields>
        <fullName>Article1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Related Articles</relationshipLabel>
        <relationshipName>Related_Articles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Related Articles (Article2)</relationshipLabel>
        <relationshipName>Related_Articles2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Article_Id__c</fullName>
        <description>Generates a linkable Related Article Id for use in related list</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Article2__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Article_Last_Modified_Date__c</fullName>
        <formula>Article2__r.LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Article_Title__c</fullName>
        <description>Creates a link to the Related Article&apos;s Title.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Article2__r.Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Companion Related Article</label>
        <referenceTo>Related_Article__c</referenceTo>
        <relationshipLabel>Related Articles</relationshipLabel>
        <relationshipName>Related_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Related Article</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RArtcl-{000000000}</displayFormat>
        <label>Related Article Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Relate_to_Self</fullName>
        <active>true</active>
        <description>Do not allow the article to be related to itself</description>
        <errorConditionFormula>Article1__c == Article2__c</errorConditionFormula>
        <errorDisplayField>Article2__c</errorDisplayField>
        <errorMessage>Article may not be related to itself.</errorMessage>
    </validationRules>
</CustomObject>